--- a/style.css
+++ b/style.css
@@ -1,164 +1,119 @@
-* {
-    padding: 0;
+*{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    outline: 0;
-    transition: all 0.5s ease;
-}
-
-body {
-    font-family: sans-serif;
-}
-
-a {
-    text-decoration: none;
-    color: #fff;
-}
-
-body {
-    background-image: linear-gradient( to bottom right, hsl(189, 85%, 55%),hsl(125, 64%, 52%));
-}
-
-.container {
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    place-items: center;
-}
-
-.calculator {
-    position: relative;
-    height: auto;
-    width: auto;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 30px hsl(0, 83%, 49%);
-}
-
-.theme-toggler {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    color: #fff;
-    cursor: pointer;
-    z-index: 1;
-}
-
-.theme-toggler.active {
-    color: #333;
-}
-
-.theme-toggler.active::before {
-    background-color: #fff;
-}
-
-.theme-toggler::before {
-    content: '';
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    background-color: #333;
-    z-index: -1;
-}
-
-#display {
-    margin: 0 10px;
-    height: 130px;
-    width: auto;
-    max-width: 250px;
+    font-family: "Poppins", sans-serif;
+  }
+  body{
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    font-size: 40px;
-    margin-bottom: 25px;
-    overflow-x: scroll;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: hsl(34, 71%, 49%);
   }
-
-#display::-webkit-scrollbar {
-    display: block;
-    height: 2px;
-}
-
-button {
-    height: 90px;
-    width: 90px;
-    border: 0;
-    border-radius: 30px;
-    margin: 5px;
-    font-size: 25px;
+  
+  ::selection{
+    color: hsl(0, 83%, 38%);
+    background: #b4800e;
+  }
+  .wrapper{
+    width: 430px;
+    background: #61c70d;
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 7px 7px 12px rgba(0,0,0,0.05);
+  }
+  .wrapper header{
+    color: #eea41c;
+    font-size: 27px;
+    font-weight: 589;
+    text-align: center;
+  }
+  .wrapper form{
+    height: 170px;
+    display: flex;
     cursor: pointer;
-    transition: all 200ms ease;
-}
-
-button:hover {
-    transform: scale(1.1);
-}
-
-button#equal {
-    height: 100px;
-}
-
-/* light theme */
-
-.calculator {
-    background-color: hsl(197, 98%, 55%);
-}
-
-.calculator #display {
-    color: #0a1e23;
-}
-
-.calculator button#clear {
-    background-color: #ffd5d8;
-    color: #fc4552;
-}
-
-.calculator button.btn-number {
-    background-color: hsl(201, 78%, 49%);
-    color: hsl(64, 86%, 49%);
-}
-
-.calculator button.btn-operator {
-    background-color: #ffd0fb;
-    color: #f967f3;
+    margin: 38px 0;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 7px;
+    border: 2px dashed #b85d12;
+  }
+  form :where(i, p){
+    color: #c77e12;
+  }
+  form i{
+    font-size: 60px;
+  }
+  form p{
+    margin-top: 19px;
+    font-size: 21px;
   }
   
-  .calculator button.btn-equal {
-    background-color: hsl(166, 74%, 48%);
-    color: hsl(59, 92%, 51%);
+  section .row{
+    margin-bottom: 10px;
+    background: #f07d20;
+    list-style: none;
+    padding: 20px 25px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-
-  /* dark theme */
-
-  .calculator.dark {
-    background-color: hsl(76, 94%, 52%);
+  section .row i{
+    color: #c0e226;
+    font-size: 50px;
   }
-
-  .calculator.dark #display {
-    color: hsl(200, 86%, 51%);
+  section .details span{
+    font-size: 18px;
   }
-
-  .calculator.dark button#clear {
-    background-color: #2d191e;
-    color: #bd3740;
+  .progress-area .row .content{
+    width: 90%;
+    margin-left: 15px;
   }
-
-  .calculator.dark button.btn-number {
-    background-color: #22a9e7;
-    color: #f08710;
+  .progress-area .details{
+    display: flex;
+    align-items: center;
+    margin-bottom: 9px;
+    justify-content: space-between;
   }
-
-  .calculator.dark button.btn-operator {
-    background-color: #2e1f39;
-    color: #aa00a4;
+  .progress-area .content .progress-bar{
+    height: 6px;
+    width: 100%;
+    margin-bottom: 4px;
+    background: #2a80e2;
+    border-radius: 30px;
   }
-  
-  .calculator.dark button.btn-equal {
-    background-color: hsl(36, 82%, 51%);
-    color: hsl(0, 85%, 50%);
+  .content .progress-bar .progress{
+    height: 90%;
+    width: 0%;
+    background: #69f274;
+    border-radius: inherit;
   }
-
-  
+  .uploaded-area{
+    max-height: 240px;
+    overflow-y: scroll;
+  }
+  .uploaded-area.onprogress{
+    max-height: 158px;
+  }
+  .uploaded-area::-webkit-scrollbar{
+    width: 0px;
+  }
+  .uploaded-area .row .content{
+    display: flex;
+    align-items: center;
+  }
+  .uploaded-area .row .details{
+    display: flex;
+    margin-left: 20px;
+    flex-direction: column;
+  }
+  .uploaded-area .row .details .size{
+    color: #961d1d;
+    font-size: 17px;
+  }
+  .uploaded-area i.fa-check{
+    font-size: 21px;
+  }
