--- a/style.css
+++ b/style.css
@@ -1,119 +1,82 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: hsl(34, 71%, 49%);
-  }
-  
-  ::selection{
-    color: hsl(0, 83%, 38%);
-    background: #b4800e;
-  }
-  .wrapper{
-    width: 430px;
-    background: #61c70d;
-    border-radius: 5px;
-    padding: 30px;
-    box-shadow: 7px 7px 12px rgba(0,0,0,0.05);
-  }
-  .wrapper header{
-    color: #eea41c;
-    font-size: 27px;
-    font-weight: 589;
-    text-align: center;
-  }
-  .wrapper form{
-    height: 170px;
-    display: flex;
-    cursor: pointer;
-    margin: 38px 0;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border-radius: 7px;
-    border: 2px dashed #b85d12;
-  }
-  form :where(i, p){
-    color: #c77e12;
-  }
-  form i{
-    font-size: 60px;
-  }
-  form p{
-    margin-top: 19px;
-    font-size: 21px;
-  }
-  
-  section .row{
-    margin-bottom: 10px;
-    background: #f07d20;
-    list-style: none;
-    padding: 20px 25px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  section .row i{
-    color: #c0e226;
-    font-size: 50px;
-  }
-  section .details span{
-    font-size: 18px;
-  }
-  .progress-area .row .content{
-    width: 90%;
-    margin-left: 15px;
-  }
-  .progress-area .details{
-    display: flex;
-    align-items: center;
-    margin-bottom: 9px;
-    justify-content: space-between;
-  }
-  .progress-area .content .progress-bar{
-    height: 6px;
-    width: 100%;
-    margin-bottom: 4px;
-    background: #2a80e2;
-    border-radius: 30px;
-  }
-  .content .progress-bar .progress{
-    height: 90%;
-    width: 0%;
-    background: #69f274;
-    border-radius: inherit;
-  }
-  .uploaded-area{
-    max-height: 240px;
-    overflow-y: scroll;
-  }
-  .uploaded-area.onprogress{
-    max-height: 158px;
-  }
-  .uploaded-area::-webkit-scrollbar{
-    width: 0px;
-  }
-  .uploaded-area .row .content{
-    display: flex;
-    align-items: center;
-  }
-  .uploaded-area .row .details{
-    display: flex;
-    margin-left: 20px;
-    flex-direction: column;
-  }
-  .uploaded-area .row .details .size{
-    color: #961d1d;
-    font-size: 17px;
-  }
-  .uploaded-area i.fa-check{
-    font-size: 21px;
-  }
+/* Import Google font - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: hwb(51 25% 4%);
+}
+:where(.container, form, .input-field, header) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container {
+  background: hsla(0, 0%, 100%, 0.404);
+  padding: 30px 65px;
+  border-radius: 12px;
+  row-gap: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.container header {
+  height: 75px;
+  width: 75px;
+  background: hsl(59, 89%, 60%);
+  color: #fff;
+  font-size: 3.5rem;
+  border-radius: 50%;
+}
+.container h4 {
+  font-size: 1.25rem;
+  color: #12ce0b;
+  font-weight: 500;
+}
+form .input-field {
+  flex-direction: row;
+  column-gap: 10px;
+}
+.input-field input {
+  height: 55px;
+  width: 55px;
+  border-radius: 6px;
+  outline: none;
+  font-size: 1.135rem;
+  text-align: center;
+  border: 1px solid #dddddd70;
+}
+.input-field input:focus {
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+}
+.input-field input::-webkit-inner-spin-button,
+.input-field input::-webkit-outer-spin-button {
+  display: none;
+}
+form button {
+  margin-top: 20px;
+  width: 90%;
+  color: #801515;
+  font-size: 2rem;
+  border: none;
+  padding: 9px 0;
+  cursor: pointer;
+  border-radius: 6px;
+  pointer-events: none;
+  background: #6e93f7;
+  transition: all 0.2s ease;
+}
+form button.active {
+  background: #40f4eb25;
+  pointer-events: auto;
+}
+form button:hover {
+  background: #f10e9a;
+}
+
